[package]
name = "modbus_interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tokio-modbus = "*"
#tokio = { version = "0.2.22", features = ["full"] }
#tokio = { version = "0.2", features = ["full"] }
modbus = "1.0.4"